Add Java SDK package verification